# fastapi-tdd-docker

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  aerich.ini  docker-compose.yml  pyproject.toml  setup.cfg
fastapi_tdd_docker/: config.py  db.py  main.py
fastapi_tdd_docker/api/: crud.py  ping.py  summaries.py
tests/: conftest.py  test_ping.py
